--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="bannerTxt">
                     <div class="logo">
-                        <img src="material/Logo/LOGO-bk.png" alt="Big Issue">
+                        <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/LOGO-bk.png?raw=true" alt="Big Issue">
                     </div>
                     <p>Helping people helping themsevles</p>
                 </div>
@@ -70,32 +70,32 @@
                     <h2>各期雜誌</h2>
                     <div class="issueContent">
                         <div class="asideTitlePic">
-                            <img src="material/PC/Side_title_01.png" alt="Aside Title">
+                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Side_title_01.png?raw=true" alt="Aside Title">
                         </div>
                         <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active" data-interval="4000">
-                                    <img class="showLightBox" src="material/magazine/Mag_2020_06_A.jpeg" class="d-block w-100" alt="...">
+                                    <img class="showLightBox" src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_06_A.jpeg?raw=true" class="d-block w-100" alt="...">
                                     <div class="animate__animated animate__fadeInUp">
-                                        <img src="material/PC/PC_section_01_Magzine_main_txt_6.png">
+                                        <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/PC_section_01_Magzine_main_txt_6.png?raw=true">
                                     </div>
                                 </div>
                                 <div class="carousel-item" data-interval="4000">
-                                    <img class="showLightBox" src="material/magazine/Mag_2020_05.jpeg" class="d-block w-100" alt="...">
+                                    <img class="showLightBox" src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_05.jpeg?raw=true" class="d-block w-100" alt="...">
                                     <div class="animate__animated animate__fadeInUp">
-                                        <img src="material/PC/PC_section_01_Magzine_main_txt_5.png">
+                                        <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/PC_section_01_Magzine_main_txt_5.png?raw=true">
                                     </div>
                                 </div>
                                 <div class="carousel-item" data-interval="4000">
-                                    <img class="showLightBox" src="material/magazine/Mag_2020_04.jpeg" class="d-block w-100" alt="...">
+                                    <img class="showLightBox" src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_04.jpeg?raw=true" class="d-block w-100" alt="...">
                                     <div class="animate__animated animate__fadeInUp">
-                                        <img src="material/PC/PC_section_01_Magzine_main_txt_4.png">
+                                        <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/PC_section_01_Magzine_main_txt_4.png?raw=true">
                                     </div>
                                 </div>
                                 <div class="carousel-item" data-interval="4000">
-                                    <img class="showLightBox" src="material/magazine/Mag_2020_03.jpeg" class="d-block w-100" alt="...">
+                                    <img class="showLightBox" src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_03.jpeg?raw=true" class="d-block w-100" alt="...">
                                     <div class="animate__animated animate__fadeInUp">
-                                        <img src="material/PC/PC_section_01_Magzine_main_txt_3.png">
+                                        <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/PC_section_01_Magzine_main_txt_3.png?raw=true">
                                     </div>
                                 </div>
                             </div>
@@ -160,7 +160,7 @@
                     <h2>銷售員群像</h2>
                     <div class="salesContent">
                         <div class="asideTitlePic">
-                            <img src="material/PC/Side_title_02.png" alt="Aside Title">
+                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Side_title_02.png?raw=true" alt="Aside Title">
                         </div>
                         <div class="salesStory">
                             <ul class="salesList">
@@ -264,7 +264,7 @@
 
             <div class="asideBar">
                 <div class="asideLogo">
-                    <img src="material/PC/Nav_logo-01.png" alt="Aside Big Issue Logo">
+                    <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo">
                 </div>
                 <nav>
                     <h2>Aside Navigation</h2>
