--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
     <header class="header">
         <h1>The Big Issue Taiwan</h1>
         <div class="sectionContainer">
-            <div class="headerBar">
+            <div class="headerBar tabletMobileBar">
                 <div class="logo">
                     <img src="" alt="Big Issue Logo">
                 </div>
                 <nav>
                     <h2>Navigation</h2>
                     <ul class="navBarList">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
+                        <li><a href="#issueId"></a></li>
+                        <li><a href="#salesId"></a></li>
+                        <li><a href="#aboutId"></a></li>
                         <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
                     </ul>
@@ -69,7 +69,7 @@
                 <section class="section issue" id="issueId">
                     <h2>各期雜誌</h2>
                     <div class="issueContent">
-                        <div class="asideTitlePic">
+                        <div class="asideCommon">
                             <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Side_title_01.png?raw=true" alt="Aside Title">
                         </div>
                         <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
@@ -159,7 +159,7 @@
                 <section class="section sales" id="salesId">
                     <h2>銷售員群像</h2>
                     <div class="salesContent">
-                        <div class="asideTitlePic">
+                        <div class="asideCommon">
                             <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Side_title_02.png?raw=true" alt="Aside Title">
                         </div>
                         <div class="salesStory">
@@ -240,7 +240,7 @@
                                     <div class="storyTxt">
                                         <h3>雲林科技大學</h3>
                                         <p>「以前有做過會計助理，也待過會計事務所，但這些工作的壓力大到我無法負荷。後來精神狀況不好後，就完全無法勝任工作了。」</p>
-                                        <p>2016年宛純搬來亞葵小鎮生活，這裏是一個提供精神復健的場域，她試著重新調整自己的心靈狀態。過去曾對人群恐慌，內心時時充滿負面情緒且感到焦慮，在康復中心老師的細心陪伴與支持下，她重新尋回正向、積極的自我，並努力找回重返社會的動能……</p>
+                                        <p>2016年宛純搬來亞葵小鎮生活，這裏是一個提供精神復健的場域，過去曾對人群恐慌，內心時時充滿負面情緒且感到焦慮，在老師的細心陪伴與支持下，她重新尋回正向、積極的自我，並努力找回重返社會的動能……</p>
                                     </div>
                                     <button class="moreBtn">
                                         <a href="#">Read More</a>
@@ -250,8 +250,55 @@
                         </div>
                     </div>
                     <button class="moreBtn">
-                        <a href="#">預覽更多雜誌</a>
+                        <a href="#">更多銷售員故事</a>
                     </button>
+                </section>
+
+<!-- ------------------------------------------------------------------------------------------- -->
+
+                <section class="section about" id="aboutId">
+                    <h2>關於大誌</h2>
+                    <div class="aboutContent">
+                        <div class="asideCommon">
+                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Side_title_03.png?raw=true" alt="Aside Title">
+                        </div>
+                        <ul class="aboutUs">
+                            <li>
+                                <div class="aboutPic">
+                                    <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/04-about/About_01.png?raw=true" alt="">
+                                    <img class="numberPic" src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/07150b1336e1f963b64ecf0a826d239b10089280/material/01-PC/pc-about/aboutme_number_01-01.svg" alt="">
+                                </div>
+                                <div class="aboutTxt">
+                                    <h3>關於我們</h3>
+                                    <h4>不只是本雜誌，對於愛文化的人，還是本工具書</h4>
+                                    <p>The Big Issue 是 John Bird 在1991年在英國創辦的雜誌，內容涵括時事、社會議題及藝文資訊，目前於全球十個國家以不同版本的形式發行。特別的是，這份刊物的通路，是透過街友及弱勢族群來販售。台灣大智文創在2009年取得授權，在2010年4月1日正式創刊。</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="aboutPic">
+                                    <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/04-about/About_02.png?raw=true" alt="">
+                                    <img class="numberPic" src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/07150b1336e1f963b64ecf0a826d239b10089280/material/01-PC/pc-about/aboutme_number_01-02.svg" alt="">
+                                </div>
+                                <div class="aboutTxt">
+                                    <h3>我們的理念</h3>
+                                    <h4>Helping people help themselves</h4>
+                                    <h4>我們希望可以「幫助那些，幫助自己的人」。</h4>
+                                    <p>在一些地方你會看到穿著制服、配戴識別證的銷售員販售手上的雜誌。他們是經過召募及輔導的街友或社會弱勢團體，在出刊的時候用現金去批貨，其成本約是售價的一半，販售所得全數歸自己所有。</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="aboutPic">
+                                    <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/04-about/About_03.png?raw=true" alt="">
+                                    <img class="numberPic" src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/07150b1336e1f963b64ecf0a826d239b10089280/material/01-PC/pc-about/aboutme_number_01-03.svg" alt="">
+                                </div>
+                                <div class="aboutTxt">
+                                    <h3>Stay Hungry，Stay Foolish</h3>
+                                    <h4>提供一份優質的刊物給讀者</h4>
+                                    <p>這是我們送給這個世代的箴言與這本雜誌的核心精神，來自 Steve Jobs 在 2005 年史丹佛大學的畢業演說。我們的解讀是：保持飢餓，才能在平凡的食物中品嚐出自然的美味；保持未知，才能在無奇的事物中察覺這世界的奧祕。深信一個優質的雜誌可以讓販售員們在販售雜誌時更有信心和尊嚴，因為他們正協助把對讀者有啟發的內容傳遞出去。</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </section>
 
                 
@@ -270,13 +317,13 @@
                     <h2>Aside Navigation</h2>
                     <ul class="asideNavBarList">
                         <li>
-                           <a href="#issue">各期雜誌</a>
+                           <a href="#issueId">各期雜誌</a>
                         </li>
                         <li>
-                            <a href="#">銷售群像</a>
+                            <a href="#salesId">銷售群像</a>
                         </li>
                         <li>
-                            <a href="#">關於大誌</a>
+                            <a href="#aboutId">關於大誌</a>
                         </li>
                         <li>
                             <a href="#">訂閱支持</a>
@@ -287,13 +334,62 @@
                     </ul>
                 </nav>
             </div>
-
         </div>
     </main>
     
+    <footer class="footer">
+        <div class="sectionContainer">
+            <div class="footerContent">
+                <ul class="footerInfo">
+                    <li>
+                        <div class="fooerLogo">
+                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true" alt="">
+                        </div>
+                    </li>
+                    <li>
+                        <ul class="footerSocial">
+                            <li>
+                                <a href="#">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg" alt="">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg" alt="">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg" alt="">
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul class="footerInfo">
+                    <li>
+                        <ul class="footerAboutIssue">
+                            <li>地址： 八德路一段28號2樓</li>
+                            <li>電話：02-23222607</li>
+                            <li>傳真：02-23222517</li>
+                        </ul>
+                    </li>
+                    <li>
+                        製作團隊 : 董鉞聖 / 邢惠晴 / 羅煊君 / 鄭至為 / 劉希彥
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>本網頁僅提供教學及練習使用</p>
+        </div>
+    </footer>
 
 
 
+    <!-- ---------------- 以下不要動 ---------------- -->
+
+    <script src="https://kit.fontawesome.com/ee6524aae5.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft   +2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
