--- a/story_ KaohsiungCity.html
+++ b/story_ KaohsiungCity.html
@@ -1,9 +1,12 @@
+D
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta http-equive="Content-type" content="text/html" ; charset="UTF-8">
-    <meta http="X-UA-Compatible" content="ie=edge, chrome=1">
+    <meta http-equive="Content-type" content="text/html" ;
+        charset="UTF-8">
+    <meta http="X-UA-Compatible"
+        content="ie=edge, chrome=1">
     <meta name="viewport"
         content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=2.0, shrink-to-fit=no">
 
@@ -21,11 +24,15 @@
     <meta property="fb:app_id" content="">
 
     <title>Story Taichung Eslite</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+        crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css"
+        href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
     <link rel="stylesheet" href="css/BigIssueAll.min.css">
 </head>
 
@@ -47,95 +54,107 @@
                             <ol class="storyAisdeMenu">
                                 <!-- a 連結要改 -->
                                 <li>
-                                    <a href="story_TaipeiYuanshan.html">上一則</a>
+                                    <a href="story_TainanNCKU.html">上一則</a>
                                 </li>
                                 <li>
-                                    <a href="story_TaipeiLongshanTemple.html">本則</a>
+                                    <a href="story_ KaohsiungCity.html">本則</a>
                                 </li>
                                 <li>
-                                    <a href="story_TaipeiNTUH.html">下一則</a>
+                                    <a href="story_TaipeiYuanshan.html">下一則</a>
                                 </li>
                             </ol>
                         </div>
                         <div class="storyContent">
                             <ol class="storyBreadCrumb">
                                 <li>
-                                    <a href="#"><span>HOME</span></a>
+                                    <a
+                                        href="#"><span>HOME</span></a>
                                 </li>
                                 <li>
-                                    <i class="fas fa-caret-right"></i>
+                                    <i
+                                        class="fas fa-caret-right"></i>
                                 </li>
                                 <li>
-                                    <a href="#"><span>銷售員群像</span></a>
+                                    <a
+                                        href="#"><span>銷售員群像</span></a>
                                 </li>
                                 <li>
-                                    <i class="fas fa-caret-right"></i>
+                                    <i
+                                        class="fas fa-caret-right"></i>
                                 </li>
                                 <!-- 注意地區，地區不同也要改 -->
                                 <li>
-                                    <a href="#"><span>北部地區</span></a>
+                                    <a
+                                        href="#"><span>南部地區</span></a>
                                 </li>
                                 <li>
-                                    <i class="fas fa-caret-right"></i>
+                                    <i
+                                        class="fas fa-caret-right"></i>
                                 </li>
                                 <!-- 區域所在位置名稱 -->
                                 <li>
-                                    <a href="#"><span>台北捷運龍山寺站</span></a>
+                                    <a
+                                        href="#"><span>高雄城市光廊&高醫大</span></a>
                                 </li>
                             </ol>
                             <article>
                                 <div class="storyArticle">
-                                    <div class="storyPicDescription">
+                                    <div
+                                        class="storyPicDescription">
                                         <!-- 圖片要換，h3 要改 -->
-                                        <div class="storyPic">
+                                        <div
+                                            class="storyPic">
                                             <figure>
-                                                <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/sales/sales_02_a.png"
+                                                <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/sales/sales_09.png?raw=true"
                                                     alt="">
                                                 <figcaption>
-                                                    <h3>台北捷運龍山寺站</h3>
+                                                    <h3>高雄城市光廊&高醫大
+                                                    </h3>
                                                 </figcaption>
                                             </figure>
                                         </div>
                                         <div class="picTxt">
                                             <!-- 文字要改 -->
-                                            <p>「以前我有一個日本名字喔！是我父親取的，後來國民政府來台才換成現在的中文名字，
-                                                我的名字原本是叫小山信吉！」每當聊到邱伯伯兒時的回憶時，他總是充滿微笑，不過他
-                                                目前最大的心願是，希望賣雜誌的收入能足夠讓他換新的假牙！</p>
-                                            <p class="salesName">台北捷運龍山寺站 / 邱伯伯</p>
+                                            <p>「最近終於租了一間月租兩千元的矮厝，洗澡睡覺比較方便，之前也睡過網咖，但有間自
+                                                己的空間還是比較自在。」五點多下班、放學的人潮開始流動，貴仔也下班休息。用完餐
+                                                後，六點準時上班繼續賣到九點，然後在騎著腳踏車回矮厝睡覺，迎接明天一整天的工作
+                                                。
+                                            </p>
+                                            <p
+                                                class="salesName">
+                                                高雄城市光廊&高醫大 / 柯石貴</p>
                                         </div>
                                     </div>
-                                    <div class="storyTxtContent">
+                                    <div
+                                        class="storyTxtContent">
                                         <!-- 段落文字要改 -->
-                                        <p>「最早以前的第一份工作是在電器行，邊賣電器兼維修，後來就換到西藥原料工
-                                            廠當員工，工廠之後遷到桃園，我就換到桃園工作，藥廠的工作一待就十五年
-                                            了，然後我在六十歲以前辦理提前退休，因為好像身體開始會對藥粉過敏吧，
-                                            感覺那藥粉對身體很不好，有一些同事比我還早離開工廠，所以我才決定退休
-                                            。」</p>
-                                        <p>邱伯伯是第一屆的銷售員，從四月到七月都一直在龍山寺站販售雜誌，26年次
-                                            的他曾經受過幾年日本教育，小時後就隨著父親從斗六北上，住在西門市場一
-                                            帶（今西門紅樓），他的父親曾經在台灣郵電局服務，以當時公務人員薪資，
-                                            要在台北維持一個小康家庭也是辛苦的，但對邱伯伯而言，台北城的童年記憶
-                                            是快樂的！
-                                            賣玉蘭花要很早出門補貨，搬運與串花加工對他而言也不容易，賣刮刮樂又擔心如果全被搶走了也追不到，陳大哥想來想去還是覺得賣雜誌比較好，至少沒人會搶雜誌。
+                                        <p>從2013年十月開始，大誌雜誌終於來到高雄開賣，其中一個據點就在國際建築大師理查・
+                                            羅傑斯所設計的 R9 站體附近，中央公園站旁的城市光廊入口處，柯大哥（貴仔）的腳踏
+                                            車就直率地停在轉角的行道樹下，顯眼易找。貴仔說：「我早上八點到十二點在高師大校
+                                            門口賣，下午一點到晚上九點就來中央公園賣，每天賣的時間很長，這樣客人比較好找。
+                                            從去年十月就固定在這兩個地點賣雜誌了。」（編按：目前已改至高醫大與城市光廊販售
+                                            ） .
                                         </p>
-                                        <p>「有一天去萬華社會局時，在電梯裡看到大誌雜誌的說明會傳單，就想說去試
-                                            試看好了，不然也一大把年紀了，根本不可能找到工作啊！」之後邱伯伯就到
-                                            活水泉及燈塔教會參加說明會，四月一日開始在龍山寺站賣雜誌，猶記得第一
-                                            天首賣日的傍晚，邱伯伯站在一號出口，用微弱的聲音念著：「大誌雜誌，一
-                                            本一百！」後來接連著有兩位路人前來跟他購買時，他的臉上露出開懷的笑容
-                                            和三顆牙齒！</p>
-                                        <p>退休之後邱伯伯就再也沒有找到穩定的工作了，由於父親生前有留下一間房子
-                                            ，後來整建更新後他有分配到一間公寓，所以晚年至少還有一個安身的住所。
-                                            「以前我有一個日本名字喔！是我父親取的，後來國民政府來台才換成現在的
-                                            中文名字，我的名字原本是叫小山信吉！」每當聊到邱伯伯兒時的回憶時，他
-                                            總是充滿微笑，不過他目前最大的心願是，希望賣雜誌的收入能足夠讓他換新
-                                            的假牙！「年紀大了，沒有牙齒實在很難吃東西。」邱伯伯很沮喪的說著。
-                                            然而，其實邱伯伯更嚮往的事是，搬回自己的公寓，那間父親留給他的公寓
-                                            ……。
-                                            從創刊號在便利商店看到時就覺得很不錯，但後來僅有台北的街友有販售，現在終於在台中也能買到！每個月一定都會來跟陳大哥買。」這裡是台中最熱門的新興地點，每天人來人往，但陳大哥也沒有延長販售時間的打算，他覺得日子過的去就好了。在收工邊收拾書包的同時，還一邊跟下個月將參加指考的林同學叮嚀要認真準備考試，努力實踐自己的夢想。
+                                        <p>在這段閑晃的日子裡，貴仔偶爾也會去撿些舊物到跳蚤市場賣，賺點現金買米酒喝。貴仔
+                                            說：「這幾年高雄很多地方在拆老房子，像左營眷村啦、中都窯廠啦，還有一些零星的舊
+                                            厝，大家都會交流拆屋資訊，我的腳踏車後面還綁一個大籃子，就四處去搜、去撿，然後
+                                            運到十全路跳蚤市場便宜賣，好一點一天賺個兩、三百塊，但現在都不能擺攤了，警察會
+                                            趕人，房子也拆光沒東西撿了。」​​
                                         </p>
-                                        <p>龍山寺站週邊的商圈燈火逐漸明亮，人群熙來攘往的在我們身邊遊走，邱伯伯
-                                            心繫著賣出雜誌，而我卻納悶著何以七十多歲的他無法回到屬於自已的家？</p>
+                                        <p>1989年左右，貴仔曾經在海上待過一段時間，貴仔說：「我對年代還有點印象，是因為記
+                                            得當年在海外聽到歌星張帝選上立法委員了。我們都會聽他的歌，當時歌星選上立委還滿
+                                            特別的。」起先貴仔是在近洋的拖網漁船當三副，但後來捕不到什麼魚，再加上流刺網被
+                                            管制使用，貴仔就換到遠洋漁船當二副，一趟三年半的鮪釣船，從前鎮漁港航行到薩摩亞
+                                            ，但還是捕不到魚，船長堅持繼續找魚，貴仔就下船留在薩摩亞，幫從臺灣移民到當地的
+                                            朋友種田，最後貴仔因非法居留而被遣送回臺灣，結束了他的船員生涯。</p>
+                                        <p>「「回臺灣後，一直沒有找到穩定的工作，後來就在公園一天度過一天。現在努力賣雜誌後
+                                            生活有點改善，記得剛開始賣的前兩個月真的賣得很不好，十二月號陳綺貞做封面時就賣
+                                            得不錯，然後一月號的田馥甄也賣很多本，接著就越來越穩定了，最近終於租了一間月租
+                                            兩千元的矮厝，洗澡睡覺比較方便，之前也睡過網咖，但有間自己的空間還是比較自在
+                                            。」。五點多下班、放學的人潮開始在中央公園流動，貴仔也下班休息吃晚餐，用完餐後
+                                            ，六點準時上班繼續賣到九點，然後在騎著腳踏車回矮厝睡覺，迎接明天一整天的工作。</p>
+                                    
+
                                     </div>
                                 </div>
                             </article>
@@ -154,13 +173,16 @@
                 <h2>Aside Navigation</h2>
                 <ul class="asideNavBarList">
                     <li>
-                        <a href="index.html#issueId">各期雜誌</a>
+                        <a
+                            href="index.html#issueId">各期雜誌</a>
                     </li>
                     <li>
-                        <a href="index.html#salesId">銷售群像</a>
+                        <a
+                            href="index.html#salesId">銷售群像</a>
                     </li>
                     <li>
-                        <a href="index.html#aboutId">關於大誌</a>
+                        <a
+                            href="index.html#aboutId">關於大誌</a>
                     </li>
                     <li>
                         <a href="#">訂閱支持</a>
@@ -242,17 +264,22 @@
 
     <!-- ---------------- 以下不要動 ---------------- -->
 
-    <script src="https://kit.fontawesome.com/ee6524aae5.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    <script src="https://kit.fontawesome.com/ee6524aae5.js"
+        crossorigin="anonymous"></script>
+    <script
+        src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    <script
+        src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft   +2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    <script
+        src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript"
+        src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="BigIssue_JavaScript.js"></script>
     <script src="BigIssue_jQuery.js"></script>
 </body>
