--- a/story_TaicungYunTech.html
+++ b/story_TaicungYunTech.html
@@ -47,13 +47,13 @@
                             <ol class="storyAisdeMenu">
                                 <!-- a 連結要改 -->
                                 <li>
-                                    <a href="story_TaipeiYuanshan.html">上一則</a>
+                                    <a href="story_TaichungEslite.html">上一則</a>
                                 </li>
                                 <li>
-                                    <a href="story_TaipeiLongshanTemple.html">本則</a>
+                                    <a href="story_TaicungYunTech.html">本則</a>
                                 </li>
                                 <li>
-                                    <a href="story_TaipeiNTUH.html">下一則</a>
+                                    <a href="story_ DouliuTrainStation.html">下一則</a>
                                 </li>
                             </ol>
                         </div>
@@ -73,14 +73,14 @@
                                 </li>
                                 <!-- 注意地區，地區不同也要改 -->
                                 <li>
-                                    <a href="#"><span>北部地區</span></a>
+                                    <a href="#"><span>中部地區</span></a>
                                 </li>
                                 <li>
                                     <i class="fas fa-caret-right"></i>
                                 </li>
                                 <!-- 區域所在位置名稱 -->
                                 <li>
-                                    <a href="#"><span>台北捷運龍山寺站</span></a>
+                                    <a href="#"><span>雲林科技大學</span></a>
                                 </li>
                             </ol>
                             <article>
@@ -89,53 +89,48 @@
                                         <!-- 圖片要換，h3 要改 -->
                                         <div class="storyPic">
                                             <figure>
-                                                <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/sales/sales_02_a.png"
+                                                <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/sales/sales_06.png"
                                                     alt="">
                                                 <figcaption>
-                                                    <h3>台北捷運龍山寺站</h3>
+                                                    <h3>雲林科技大學</h3>
                                                 </figcaption>
                                             </figure>
                                         </div>
                                         <div class="picTxt">
                                             <!-- 文字要改 -->
-                                            <p>「以前我有一個日本名字喔！是我父親取的，後來國民政府來台才換成現在的中文名字，
-                                                我的名字原本是叫小山信吉！」每當聊到邱伯伯兒時的回憶時，他總是充滿微笑，不過他
-                                                目前最大的心願是，希望賣雜誌的收入能足夠讓他換新的假牙！</p>
-                                            <p class="salesName">台北捷運龍山寺站 / 邱伯伯</p>
+                                            <p>「好像來亞葵住了兩個多月吧！感覺有比較穩定了，那時剛好《大誌雜誌》來雲林推廣，
+                                                我就想說嘗試看看，試著接觸外面的世界。其實每天固定出來賣雜誌，會慢慢減緩我對人
+                                                群的恐懼感，也讓我開始有勇氣面對陌生人，這工作對我是真的滿有幫助的。」</p>
+                                            <p class="salesName">雲林科技大學 / 許宛純</p>
                                         </div>
                                     </div>
                                     <div class="storyTxtContent">
                                         <!-- 段落文字要改 -->
-                                        <p>「最早以前的第一份工作是在電器行，邊賣電器兼維修，後來就換到西藥原料工
-                                            廠當員工，工廠之後遷到桃園，我就換到桃園工作，藥廠的工作一待就十五年
-                                            了，然後我在六十歲以前辦理提前退休，因為好像身體開始會對藥粉過敏吧，
-                                            感覺那藥粉對身體很不好，有一些同事比我還早離開工廠，所以我才決定退休
-                                            。」</p>
-                                        <p>邱伯伯是第一屆的銷售員，從四月到七月都一直在龍山寺站販售雜誌，26年次
-                                            的他曾經受過幾年日本教育，小時後就隨著父親從斗六北上，住在西門市場一
-                                            帶（今西門紅樓），他的父親曾經在台灣郵電局服務，以當時公務人員薪資，
-                                            要在台北維持一個小康家庭也是辛苦的，但對邱伯伯而言，台北城的童年記憶
-                                            是快樂的！
-                                            賣玉蘭花要很早出門補貨，搬運與串花加工對他而言也不容易，賣刮刮樂又擔心如果全被搶走了也追不到，陳大哥想來想去還是覺得賣雜誌比較好，至少沒人會搶雜誌。
-                                        </p>
-                                        <p>「有一天去萬華社會局時，在電梯裡看到大誌雜誌的說明會傳單，就想說去試
-                                            試看好了，不然也一大把年紀了，根本不可能找到工作啊！」之後邱伯伯就到
-                                            活水泉及燈塔教會參加說明會，四月一日開始在龍山寺站賣雜誌，猶記得第一
-                                            天首賣日的傍晚，邱伯伯站在一號出口，用微弱的聲音念著：「大誌雜誌，一
-                                            本一百！」後來接連著有兩位路人前來跟他購買時，他的臉上露出開懷的笑容
-                                            和三顆牙齒！</p>
-                                        <p>退休之後邱伯伯就再也沒有找到穩定的工作了，由於父親生前有留下一間房子
-                                            ，後來整建更新後他有分配到一間公寓，所以晚年至少還有一個安身的住所。
-                                            「以前我有一個日本名字喔！是我父親取的，後來國民政府來台才換成現在的
-                                            中文名字，我的名字原本是叫小山信吉！」每當聊到邱伯伯兒時的回憶時，他
-                                            總是充滿微笑，不過他目前最大的心願是，希望賣雜誌的收入能足夠讓他換新
-                                            的假牙！「年紀大了，沒有牙齒實在很難吃東西。」邱伯伯很沮喪的說著。
-                                            然而，其實邱伯伯更嚮往的事是，搬回自己的公寓，那間父親留給他的公寓
-                                            ……。
-                                            從創刊號在便利商店看到時就覺得很不錯，但後來僅有台北的街友有販售，現在終於在台中也能買到！每個月一定都會來跟陳大哥買。」這裡是台中最熱門的新興地點，每天人來人往，但陳大哥也沒有延長販售時間的打算，他覺得日子過的去就好了。在收工邊收拾書包的同時，還一邊跟下個月將參加指考的林同學叮嚀要認真準備考試，努力實踐自己的夢想。
-                                        </p>
-                                        <p>龍山寺站週邊的商圈燈火逐漸明亮，人群熙來攘往的在我們身邊遊走，邱伯伯
-                                            心繫著賣出雜誌，而我卻納悶著何以七十多歲的他無法回到屬於自已的家？</p>
+                                        <p>初春中午氣候涼爽，雲林科大側門龍潭南路轉角的提款機前，就是宛純販售雜誌的地點。
+                                            每周一到周五的中午12點，宛純會準時來到這裡工作，但她販售的時間不長，因為只能把
+                                            握師生外出用餐的一小時來賣雜誌；大約賣到1點多後，她就會騎機車繼續前往嘉義大學
+                                            ，從下午2點多賣到4點，然後騎著機車回去大埤鄉溫馨的亞葵小鎮。</p>
+                                        <p>亞葵小鎮是一個提供精神復健的場域，2016年宛純搬來亞葵生活，試著重新調整自己的心
+                                            靈狀態。「好像來亞葵住了兩個多月吧！感覺有比較穩定了，那時剛好《大誌雜誌》來雲
+                                            林推廣，我就想說嘗試看看，試著接觸外面的世界，我還記得那一期的封面是S.H.E，第
+                                            78期。」這是宛純克服內心的迷霧，重新走出室外的一刻。從2016年9月販售至今已一年
+                                            半的時間，過去曾對人群恐慌，內心時時充滿負面情緒且感到焦慮，在康復中心老師的細
+                                            心陪伴與支持協助下，宛純重新尋回正向、積極的自我，並努力找回重返社會的動能。</p>
+                                        <p>「以前有做過會計助理，也待過會計事務所，因為在學校是念這方面的科系，但這些工作
+                                            的壓力大到我無法負荷。後來精神狀況不好後，就完全無法勝任工作了，甚至會一直待在
+                                            房裡不出門，家人也相當煩惱⋯⋯」宛純回憶著說。剛來到亞葵小鎮時，中心會安排一些靜
+                                            態的工作給成員做，例如摺蓮花、包火種、清理廚房等等，待身心狀況調養的較為穩定後
+                                            ，就可以嘗試著到外面工作。「我現在也有重新再去上課學習，晚上也會固定去診所幫忙
+                                            ，讓自己慢慢能夠獨立地回到社會崗位上。」而亞葵小鎮裡的成員彼此多會相互扶持、陪
+                                            伴，主任也會安排多元的課程讓成員學習。宛純說，大家偶爾會切磋如何提升雜誌的銷售
+                                            量，並討論有無更合適的販售點。「其實每天固定出來賣雜誌，會慢慢減緩我對人群的恐
+                                            懼感，也讓我開始有勇氣面對陌生人，這工作對我是真的滿有幫助的。」</p>
+                                        <p>時間已經過了中午1點，人行道上的學生紛紛往校園裡移動，宛純將手上的雜誌收進書包
+                                            後，準備繼續前往下一個販售點：嘉義大學，一所願意讓她進入校園裡販售雜誌的大學。
+                                            在這涼爽的初春午后，相信宛純必然會撥開迷霧重新找到目標，以正面積極的態度實踐自
+                                            我！。</p>
+                                    
+
                                     </div>
                                 </div>
                             </article>
