--- a/story_TaipeiNTUH.html
+++ b/story_TaipeiNTUH.html
@@ -47,13 +47,13 @@
                             <ol class="storyAisdeMenu">
                                 <!-- a 連結要改 -->
                                 <li>
-                                    <a href="">上一則</a>
+                                    <a href="story_TaipeiLongshanTemple.html">上一則</a>
                                 </li>
                                 <li>
-                                    <a href="">本則</a>
+                                    <a href="story_TaipeiNTUH.html">本則</a>
                                 </li>
                                 <li>
-                                    <a href="">下一則</a>
+                                    <a href="story_ HsinchuTrainStation.html">下一則</a>
                                 </li>
                             </ol>
                         </div>
