--- a/story_TaichungEslite.html
+++ b/story_TaichungEslite.html
@@ -42,13 +42,13 @@
                             <ol class="storyAisdeMenu">
                                 <!-- a 連結要改 -->
                                 <li>
-                                    <a href="">上一則</a>
+                                    <a href="story_ HsinchuTrainStation.html">上一則</a>
                                 </li>
                                 <li>
-                                    <a href="">本則</a>
+                                    <a href="story_TaichungEslite.html">本則</a>
                                 </li>
                                 <li>
-                                    <a href="">下一則</a>
+                                    <a href="story_TaicungYunTech.html">下一則</a>
                                 </li>
                             </ol>
                         </div>
